@@ -45,8 +45,9 @@ enum GBALogLevel {
 
 	GBA_LOG_GAME_ERROR = 0x100,
 	GBA_LOG_SWI = 0x200,
+	GBA_LOG_STATUS = 0x400,
 
-	GBA_LOG_ALL = 0x33F,
+	GBA_LOG_ALL = 0x73F,
 
 #ifdef NDEBUG
 	GBA_LOG_DANGER = GBA_LOG_ERROR
